<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Jungle Explorer</string>
    <string name="animal_groups">Groups</string>
    <string name="animals">Animals</string>
    <string name="experts">Experts</string>
    <string name="favorites">Favorites</string>
    <string name="contacts">Contacts</string>
    <string name="basic_info">Basic info</string>
    <string name="location">Location</string>


    <string name="add_animal">Add new animal</string>
    <string name="view_animal">View animal</string>
    <string name="edit_animal">Edit animal</string>
    <string name="add_group">Add new group</string>

    <string name="no_animals">No animals saved</string>
    <string name="no_groups">No groups saved</string>
    <string name="no_experts">No experts saved</string>
    <string name="no_experts_animal">No experts saved for this animal</string>
    <string name="no_fav">No favorite animals saved</string>
    <string name="no_contacts">No contacts available</string>

    <string name="name_hint">Name</string>
    <string name="description_hint">Description</string>
    <string name="location_text_hint">Location text</string>

    <string name="hint">Search</string>
    <string name="change_photo">Change photo</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

    <string name="invalid_name">You need to enter a name</string>
    <string name="animal_saved">Animal saved</string>
    <string name="expert_saved">Expert saved</string>

    <string name="unknown_location">Unknown place name</string>
    <string name="location_unavailable">Location is not available, try turning it on first.</string>

    <string name="contact_permission_message">%1$s needs access to your contacts to
        create and fill experts\' profile information.</string>

    <string name="storage_permission_message">%1$s needs access to your storage to
        save and access gallery photographs so that you can set profile images.</string>
    <string name="location_permission_message">%1$s needs access to your location to
        auto-set animal location, and start notification service.</string>

    <string name="animal_found">New animal found</string>
    <string name="touch_view">Touch to view more information.</string>

    <string name="no_animal_available">No animal available</string>
    <string name="nearest_animal">Nearest animal found: %1$s</string>

    <!-- Preference Strings -->
    <string name="settings">Settings</string>
    <string name="inline_preferences">Background services</string>
    <string name="title_checkbox_preference">Animal searcher notifications</string>
    <string name="summary_checkbox_preference">Enables notifications when nearby animal is found.</string>

    <string name="animal_preferences">Animal preferences</string>
    <string name="filter_animal_list">Filter</string>
    <string name="filter_animal_list_summary">Display animals based on their distance.</string>

    <string name="filter_distance">Distance</string>
    <string name="filter_distance_summary">Sets the animal search radius in meters.</string>

    <string name="map_preferences">Map preferences</string>
    <string name="map_default_title">Default continent</string>
    <string name="map_default_summary">Sets map\'s initial camera position.</string>

    <string name="google_service_unavailable">Location service is unavailable try again later,
        or disable filter from preferences.</string>
    <string name="current_location_unavailable">Location seems to be unavailable try again later.</string>

    <string-array name="africa">
        <item name="name">Africa</item>
        <item name="lat"></item>
        <item name="lng"></item>
    </string-array>

    <string-array name="antarctica">
        <item name="name">Antarctica</item>
        <item name="lat"></item>
        <item name="lng"></item>
    </string-array>

    <string-array name="asia">
        <item name="name">Asia</item>
        <item name="lat"></item>
        <item name="lng"></item>
    </string-array>

    <string-array name="australia">
        <item name="name">Australia</item>
        <item name="lat"></item>
        <item name="lng"></item>
    </string-array>

    <string-array name="europe">
        <item name="name">Europe</item>
        <item name="lat"></item>
        <item name="lng"></item>
    </string-array>

    <string-array name="north_america">
        <item name="name">North America</item>
        <item name="lat">54.5259610</item>
        <item name="lng">15.2551190</item>
    </string-array>

    <string-array name="south_america">
        <item name="name">South America</item>
        <item name="lat"></item>
        <item name="lng"></item>
    </string-array>

    <array name="continents">
        <item>@array/africa</item>
        <item>@array/antarctica</item>
        <item>@array/asia</item>
        <item>@array/australia</item>
        <item>@array/europe</item>
        <item>@array/north_america</item>
        <item>@array/south_america</item>
    </array>
</resources>
