<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:id="@+id/scrollView">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:descendantFocusability="beforeDescendants">

            <ImageView
                android:id="@+id/animalImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAnimal"
                android:src="@drawable/animal_no_image"
                android:clickable="true"
                android:scaleType="centerCrop"
                android:maxHeight="220dp"
                android:adjustViewBounds="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="fitCenter"
                    android:adjustViewBounds="true"
                    android:maxHeight="40dp"
                    android:paddingTop="10dp"
                    android:id="@+id/imageView"
                    android:src="@drawable/ic_animals"
                    android:tint="@android:color/tertiary_text_light"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="5dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name_hint"
                        android:textColor="@color/black"
                        android:id="@+id/name" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="40dp"
                    android:scaleType="fitCenter"
                    android:paddingTop="10dp"
                    android:id="@+id/imageView2"
                    android:src="@drawable/ic_nearby"
                    android:tint="@android:color/tertiary_text_light"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="5dp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/location_text_hint"
                        android:textColor="@color/black"
                        android:id="@+id/locationText" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:maxHeight="40dp"
                    android:paddingTop="10dp"
                    android:id="@+id/imageView3"
                    android:src="@drawable/ic_message_black_24dp"
                    android:tint="@android:color/tertiary_text_light"
                    android:layout_marginRight="@dimen/fab_margin"
                    android:layout_marginTop="5dp" />


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine"
                        android:ems="10"
                        android:id="@+id/description"
                        android:textColor="@color/black"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/description_hint" />
            </android.support.design.widget.TextInputLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
